# revolt_cli_project

./: .gitignore  Makefile  README.md  config_sample.json  env.sample  main.py  project.toml  pyproject.toml  run.py  run.sh  test.py
Modules/VMModule/: VMController.py
app/: CmdExecutor.py  Reciver.py  main.py
app/Modules/VMModule/: VMController.py
app_bash/: library.sh  logging.sh
app_bash/vpn/: clean_up.sh  configure.sh  env.sample  install.sh  manual_start.sh  reset.sh  run.sh  start.sh  stop.sh
app_py/: cli.py  main.py
app_py/data_models/: models.py
app_py/managers/: cmd_manager.py  config_manager.py  vm_manager.py
data/: sample_data.json
doc/: how_to.txt  install_env.txt  to_do.txt  todo.txt  wiki.txt
etc/: config_sample.json  env.sample  requirements.txt
revolt_cli/: __main__.py
revolt_cli/connectors/: ch_connector.py
revolt_cli/data_models/: models.py
revolt_cli/data_models/db/: models.py
revolt_cli/formatters/: formatters.py
revolt_cli/managers/: cli_manager.py  cmd_manager.py  command_manager.py  config_manager.py  log_manager.py  network_manager.py  terminal_manager.py
revolt_cli/models/: models.py
revolt_cli/modules/: module.py
revolt_cli/modules/app/: module.py
revolt_cli/modules/app_module/: config_manager.py  module.py  network_manager.py
revolt_cli/modules/dev_items_module/: config_manager.py  data_models.py  module.py
revolt_cli/tools/: decorators.py
