[project]
name = "revolt-cli"
version = "0.1.0"
description = "usefullness tools in one cli"
readme = "README.md"
packages = [{ include = "revolt_cli" }]
requires-python = ">=3.9,<3.15"

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
scapy = "^2.5.0"
netifaces = "^0.11.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
pytest = "^7.0.0"
black = "^23.0.0"
pydevd-pycharm = "~=251.26094.141"

[project.scripts]
revolt-cli = "revolt_cli.__main__:main"
revolt-cli-debug = "revolt_cli.__main__:debug_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"